--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,12 @@
 body
 {
-    color:deeppink;
+    color: #333;
     text-align: center;
     font-family: "arial";
+}
+#container
+{
+    width: 70%;
+    text-align: left;
+    border: 1px;
 }
